--- a/navi.html
+++ b/navi.html
@@ -32,9 +32,8 @@
         th,
         td {
             border: 1px solid #444;
-            padding: 2px 4px;
+            padding: 3px 6px;
             vertical-align: top;
-            line-height: 1.2;
         }
 
         th:first-child,
@@ -64,6 +63,57 @@
 
         i {
             color: #bbb;
+        }
+
+        @media (max-width: 600px) {
+
+            table {
+                font-size: 12px;
+            }
+
+            thead {
+                display: none;
+            }
+
+            table,
+            tbody,
+            tr,
+            th,
+            td {
+                display: block;
+                width: 100%;
+            }
+
+            tr {
+                margin-bottom: 10px;
+                border: 1px solid #444;
+                border-radius: 4px;
+                overflow: hidden;
+            }
+
+            td {
+                border: none;
+                border-bottom: 1px solid #333;
+                padding: 6px;
+                word-break: break-all;
+            }
+
+            td:first-child {
+                background: #333;
+                font-weight: 600;
+            }
+
+            td:last-child {
+                border-bottom: none;
+            }
+
+            /* PC用の固定幅を無効化 */
+            th:first-child,
+            td:first-child,
+            th:not(:first-child),
+            td:not(:first-child) {
+                width: auto;
+            }
         }
     </style>
 </head>
